<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".navigation_choiceaccount">

    <Button
        android:id="@+id/new_a_button"
        android:layout_width="308dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/next_new_account"
        android:text="@string/new_account_text"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="42dp"
        android:layout_height="27dp"
        android:layout_marginTop="180dp"
        android:src="@drawable/ic_baseline_rogin_tips_24"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="234dp"
        android:layout_height="143dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="180dp"
        android:text="@string/login_tips"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_log_button"
        android:layout_width="308dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/next_login"
        android:text="@string/login_text"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_a_button" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/BaseToolbar"
        android:layout_width="413dp"
        android:layout_height="60dp"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>