<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".repassword_config">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarTheme"
        android:layout_width="413dp"
        android:layout_height="60dp"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/forget_title"
        android:layout_width="431dp"
        android:layout_height="52dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/edittext_flame_tb"
        android:text="パスワードをお忘れの場合"
        android:gravity="center"
        android:textColor="#090000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/re_mail_title"
        android:layout_width="413dp"
        android:layout_height="43dp"
        android:layout_marginTop="64dp"
        android:background="#1E90FF"
        android:gravity="center"
        android:text="登録したメールアドレスを入力してください"
        android:textColor="#000507"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/mailaddress_title"
        android:layout_width="366dp"
        android:layout_height="32dp"
        android:layout_marginBottom="308dp"
        android:background="@drawable/edittext_flame_blue"
        android:gravity="start"
        android:text="@string/prompt_email"
        android:textColor="#020000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/re_mail_title"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/frame"
        android:layout_width="366dp"
        android:layout_height="73dp"
        android:text="text"
        android:background="@drawable/edittext_flame_gray"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/mailaddress_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mailaddress_title"
        app:layout_constraintTop_toBottomOf="@+id/mailaddress_title" />

    <EditText
        android:id="@+id/input_mail"
        android:layout_width="325dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_flame_g"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="@+id/mailaddress_title"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/mailaddress_title"
        app:layout_constraintTop_toBottomOf="@+id/mailaddress_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ok_button"
        android:text="@string/send"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame" />

</androidx.constraintlayout.widget.ConstraintLayout>